# Lite3_MotionSDK

./: CMakeLists.txt  CTestConfiguration.ini  main.cpp  package.xml
atomic_configure/: _setup_util.py  setup.sh
catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
devel/: .catkin  .rosinstall  local_setup.sh
scripts/: keyboard.py
